# lib7zip

./: .gitignore  .gitmodules  .hgignore  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac  lib7Zip.sln  libtool
Lib7Zip/: 7ZipArchive.cpp  7ZipArchiveItem.cpp  7ZipArchiveOpenCallback.cpp  7ZipArchiveOpenCallback.h  7ZipCodecInfo.cpp  7ZipCompressCodecsInfo.cpp  7ZipDllHandler.cpp  7ZipDllHandler.h  7ZipFormatInfo.cpp  7ZipFormatInfo.h  7ZipInStreamWrapper.cpp  7ZipOpenArchive.cpp  7zipLibrary.cpp  CMakeLists.txt  HelperFuncs.cpp  HelperFuncs.h  Lib7Zip - VS2008.vcproj  Lib7Zip.vcproj  Makefile.am  Makefile.in  OSFunctions.h  OSFunctions_OS2.cpp  OSFunctions_OS2.h  OSFunctions_UnixLike.cpp  OSFunctions_Win32.cpp  ReadMe.txt  SelfPath.cpp  SelfPath.h  lib7zip.h
Test7Zip/: CMakeLists.txt  Makefile.am  Makefile.in  ReadMe.txt  Test7Zip-VS2008.vcproj  Test7Zip.7z  Test7Zip.cpp  Test7Zip.vcproj  Test7Zip2.cpp  Test7ZipCallback.cpp  Test7ZipCryptFileName.7z  Test7ZipCryptFileName.cpp  Test7ZipDmg.cpp  Test7ZipMulti.cpp  Test7ZipRar5.cpp  Test7ZipSignature.cpp  TestRar5.rar  test7zipprops.cpp
cmake/: patchProto.cmd.in
includes/: Makefile.in
lib/: Makefile.am  Makefile.in
patches/: 001_avoid_duplicate_guids.patch
src/: 7ZipArchive.cpp  7ZipArchiveOpenCallback.cpp  7ZipCodecInfo.cpp  7ZipCompressCodecsInfo.cpp  7ZipDllHandler.cpp  7ZipFormatInfo.cpp  7ZipInStreamWrapper.cpp  7ZipOpenArchive.cpp  7zipLibrary.cpp  CMakeLists.txt  HelperFuncs.cpp  OSFunctions_UnixLike.cpp  OSFunctions_Win32.cpp  lib7zip.h
test/: CMakeLists.txt  Test7Zip.cpp  Test7Zip2.cpp  Test7ZipDmg.cpp  Test7ZipMulti.cpp  Test7ZipRar5.cpp  Test7ZipSignature.cpp  test_archive.cpp
test_cases/: README
